--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
-  --color-primary: #264653; 
-  --color-primary-rgb:  38, 70, 83;
-  
+  --color-primary: #264653;
+  --color-primary-rgb: 38, 70, 83;
+
   --color-secondary: #2a9d8f;
-  --color-secondary-rgb:  42, 157, 143;
+  --color-secondary-rgb: 42, 157, 143;
 
   --color-grey-light-1: #faf9f9;
   --color-grey-light-2: #f4f2f2;
@@ -20,7 +20,7 @@
 
   --shadow-light: 0 2rem 4rem rgba(0, 0, 0, 0.05);
 
-  --line: 1px solid var(--color-grey-light-2); 
+  --line: 1px solid var(--color-grey-light-2);
 
   --smallborder: 1px solid var(--color-secondary);
   --border: 2px solid var(--color-secondary);
@@ -48,7 +48,6 @@ html {
   @media screen and (max-width: 57em) {
     font-size: 50%;
   }
-
 }
 
 body {
@@ -60,4 +59,30 @@ body {
 ::selection {
   background-color: var(--color-secondary);
   color: var(--color-grey-light-1);
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 0.5rem;  
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: var(--color-grey-light-4);
+  border-radius: 1rem;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--color-primary);
+  border-radius: 1rem;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: color-mix(
+    in srgb,
+    var(--color-primary) 80%,
+    var(--color-grey-light-1) 20%
+  );
 }
