--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -77,8 +77,18 @@
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
     gap: 1.5rem;
 
+    @media screen and (max-width: 37.5em) {
+      gap: 1rem;
+    }
+
     &:not(:first-child){
       margin-block-start: 1rem;
+
+      // @media screen and (max-width: 37.5em) {
+      //   margin-block-start: 0.5rem;
+      //   border-top: var(--smallborder);
+      //   padding-block-start: 2rem;
+      // }
     }
 
     @media screen and (max-width: 37.5em) {
