--- a/src/styles/components/_datagrid.scss
+++ b/src/styles/components/_datagrid.scss
@@ -16,7 +16,11 @@
       position: relative;
 
       @media screen and (max-width: 86em) {
-        max-height: 35rem;
+        max-height: 29rem;
+      }
+      
+      @media screen and (max-width: 50em) {
+        max-height: 40rem;
       }
 
       @media screen and (max-width: 37.5em) {
