--- a/src/styles/components/_tablebuttons.scss
+++ b/src/styles/components/_tablebuttons.scss
@@ -1,17 +1,17 @@
 .table-buttons {
-    display: flex;
-    align-items: center;
-    justify-content: left;
-    gap: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  gap: 0.5rem;
 
-    & > * {
-        cursor: pointer;
-    }
+  & > * {
+    cursor: pointer;
+  }
 
-    .edit {
-        height: 2rem;
-        width: 2rem;
-        fill: var(--color-primary);
-    }
-
+  .edit,
+  .pdf {
+    height: 2rem;
+    width: 2rem;
+    fill: var(--color-primary);
+  }
 }
